Fix page horizontal overflow bug

--- a/mf_web/volumes/htdocs/sass/elements/site-body.scss
+++ b/mf_web/volumes/htdocs/sass/elements/site-body.scss
@@ -1,7 +1,3 @@
 .site-body {
     font-family: 'Montserrat', sans-serif, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-    // for masking elements
-    overflow-x: hidden;
-    width: 100%;
 }
